<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.9</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.packt.spring.ai</groupId>
	<artifactId>examples-parent</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>spring-ai-extensions</module>
		<module>example-one</module>
		<module>advisors-example</module>
		<module>audio-transcription-example</module>
		<module>chat-client-example</module>
		<module>chat-model-options-example</module>
		<module>document-etl-example</module>
		<module>embeddings-example</module>
		<module>function-example</module>
		<module>image-generation-example</module>
		<module>image-vision-example</module>
		<module>metadata-example</module>
		<module>moderation-example</module>
		<module>observability-example</module>
		<module>pre-generated-answers-example</module>
		<module>prompt-example</module>
		<module>similarity-search-example</module>
		<module>streaming-example</module>
		<module>structured-output-converter-example</module>
		<module>tokenizer-example</module>
		<module>opposites-app</module>
		<module>spring-ai-tools</module>
		<module>connect-four-app</module>
		<module>realtime-message-translation-app</module>
		<module>shazam-app</module>
	</modules>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
			<comments>
				Copyright 2024-Present Author or Authors.

				Licensed under the Apache License, Version 2.0 (the "License");
				you may not use this file except in compliance with the License.
				You may obtain a copy of the License at

				http://www.apache.org/licenses/LICENSE-2.0

				Unless required by applicable law or agreed to in writing, software
				distributed under the License is distributed on an "AS IS" BASIS,
				WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
				See the License for the specific language governing permissions and
				limitations under the License.
			</comments>
		</license>
	</licenses>

	<organization/>

	<developers>
		<developer>
			<id>jxblum</id>
			<name>John Blum</name>
			<email>jsonblum@gmail.com</email>
			<timezone>PST</timezone>
		</developer>
	</developers>

	<properties>
		<java.version>17</java.version>
		<maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
		<spring-ai.version>1.0.3</spring-ai.version>
	</properties>

	<repositories>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.ai</groupId>
				<artifactId>spring-ai-bom</artifactId>
				<version>${spring-ai.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>com.packt.spring.ai</groupId>
				<artifactId>spring-ai-extensions</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.packt.spring.ai</groupId>
				<artifactId>spring-ai-tools</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>
